--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         }
 
         body {
-            background: linear-gradient(135deg, #ee670e, #ff4d4d);
+            background-image: url("final-worlds.jpg");
+            background-repeat: no-repeat;       
+            background-size: cover;             
+            background-attachment: fixed;       
+            background-position: center;        
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -70,7 +74,7 @@
         }
 
         button {
-            background: linear-gradient(to right, #ff5722, #ff7b25);
+            background: linear-gradient(to right, #ff5722, #d8a482);
             color: white;
             border: none;
             border-radius: 8px;
@@ -84,7 +88,7 @@
         }
 
         button:hover {
-            background: linear-gradient(to right, #e64a19, #ff5722);
+            background: linear-gradient(to right, #ce6646, #ff5722);
             box-shadow: 0 6px 25px rgba(255, 255, 255, 0.8);
             transform: translateY(-3px);
         }
